ingreso de electivas al sistema y a los estudiantes, modulo de promocion de estudiantes

--- a/views/estudiante/proofPayment.jade
+++ b/views/estudiante/proofPayment.jade
@@ -55,4 +55,4 @@ block content
                                     | &nbsp; cancelar
                                 button(type="submit").btn.btn-primary.ma
                                     i.fa.fa-save
-                                    | &nbsp; Guardar Cambios
+                                    | &nbsp; Guardar y Promover el estudiante
