modulo de docentes

--- a/views/director/profile.jade
+++ b/views/director/profile.jade
@@ -57,7 +57,7 @@ block content
                             h5.text-center
                                 span.label.label-default
                                     i.fa.fa-bookmark
-                                    | &nbsp; Programa Academico
+                                    | &nbsp; Departamento
                             p.text-center Postgrados
                             h2.text-center
                                 span.label.label-primary.text-size #{numpostgrados}
