--- a/views/loginAdmin.jade
+++ b/views/loginAdmin.jade
@@ -5,7 +5,7 @@ block content
         .navbar.navbar-default
             .container
                 .navbar-header
-                    a(class="navbar-brand", href="#") Sistema EspSoft
+                    a(class="navbar-brand", href="#") Sistema AdminPost
                     button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
                         span.icon-bar
                         span.icon-bar
