--- a/views/postgrado/new.jade
+++ b/views/postgrado/new.jade
@@ -86,8 +86,7 @@ block content
                                                     notEmpty: {
                                                     },
                                                     stringLength: {
-                                                        min: 6,
-                                                        max: 30
+                                                        min: 6
                                                     }
                                                 }
                                             }
