--- a/views/postgrado/newlinfo.jade
+++ b/views/postgrado/newlinfo.jade
@@ -38,7 +38,7 @@ block content
                                         span.input-group-addon
                                             i.fa.fa-bookmark
                                         input(type="text", name="regiscal", placeholder="Identificador registro calificado", required, autofocus, autocomplete="off").form-control
-                                    p.lead Numero de registro de guia, del documento de aceptacion de los permisos que otorga para el ofrecimiento del postgrado
+                                    p.text-muted Numero de registro de guia, del documento de aceptacion de los permisos que otorga para el ofrecimiento del postgrado
 
                             .form-group
                                 label(for="inputDuracion", class="col-lg-2 control-label") Duracion
@@ -48,7 +48,7 @@ block content
                                         span.input-group-addon
                                             i.fa.fa-clock-o
                                         input(type="number", name="duracion", placeholder="Meses que dura el postgrado", required, min="0").form-control
-                                    p.lead Tiempo requerido para cumplir con los requisitos de la titulacion del postgrado
+                                    p.text-muted Tiempo requerido para cumplir con los requisitos de la titulacion del postgrado
 
                             .form-group
                                 label(for="inputDuracion", class="col-lg-2 control-label") Modalidad
@@ -60,11 +60,11 @@ block content
                                         select(name="modalidad").form-control
                                             option(value="Presencial") Presencial
                                             option(value="Distancia") Distancia
-                                    p.lead Manera como se realizaran las clases del postgrado
+                                    p.text-muted Manera como se realizaran las clases del postgrado
 
 
                             .form-group
-                                p.lead Escribe la informacion que debe conocer las personas interesadas en realizar el posgrado
+                                p.text-muted Escribe la informacion que debe conocer las personas interesadas en realizar el posgrado
                                 textarea(name="leyenda", class="leyenda", reqired).form-control
                                 script(type="text/javascript")
                                     $('.leyenda').jqte();
