--- a/views/docente/show.jade
+++ b/views/docente/show.jade
@@ -123,6 +123,32 @@ block content
 
                             fieldset
                                 .form-group
+                                    .profileAvatar
+                                        .avatar
+                                            -if (avatar != false){
+                                                img(src="/images/uploads/people/#{docente.id}.jpg", title="#{datos.nombres} #{datos.apellidos}", class="portrait")
+                                            -}else{
+                                                img(src="/images/uploads/people/empty.jpg", title="#{datos.nombres} #{datos.apellidos}", class="portrait")
+                                            -}
+                                        .btnupload
+                                            script(type="text/javascript", src="/bootstrap/js/bootstrap-filestyle.min.js")
+                                            form(enctype =  "multipart/form-data", role="form", method="POST", action="/uploader")
+                                                input(type="hidden", name="estudiante", value="#{docente.id}")
+                                                input(type="hidden", name="url", value="/docente/#{docente.id}/#{asignatura.id}")
+
+                                                .form-group
+                                                    .row
+                                                        .col-md-4
+                                                            input(type="file", class="filestyle", data-input="false", name="userPhoto", accept="image/jpeg")
+                                                    .row
+                                                        .col-md-4
+                                                            h5.text-center
+                                                                button(type="submit").btn.btn-primary.btn-sm.margin-btn-upload-student
+                                                                    i.fa.fa-cloud-upload
+                                                                    | &nbsp; Subir Foto
+                                            script(type="text/javascript").
+                                                $(":file").filestyle({input: false});
+
                                     label(for="inputCodigo", class="col-lg-2 control-label") Codigo
                                     .col-lg-10
 
