--- a/views/estudiante/show.jade
+++ b/views/estudiante/show.jade
@@ -107,7 +107,7 @@ block content
 
                                 .form-group
                                         h5.text-center
-                                            button(type=submit).btn.btn-primary
+                                            button(type="submit").btn.btn-primary
                                                 i.fa.fa-save
                                                 | &nbsp; Guardar
 
@@ -132,6 +132,32 @@ block content
                                     label(for="nombre", class="col-lg-2 control-label") Modalidad
                                     .col-lg-10
                                         h4.label.label-warning.text-size-14 #{estudiante.modalidad}
+                                .personAvatar
+                                    .avatar
+                                        -if (avatar != false){
+                                            img(src="/images/uploads/people/#{estudiante.id}.jpg", title="#{datos.nombres} #{datos.apellidos}", class="portrait")
+                                        -}else{
+                                            img(src="/images/uploads/people/empty.jpg", title="#{datos.nombres} #{datos.apellidos}", class="portrait")
+                                        -}
+                                    .btnupload
+                                        script(type="text/javascript", src="/bootstrap/js/bootstrap-filestyle.min.js")
+                                        form(enctype =  "multipart/form-data", role="form", method="POST", action="/uploader")
+                                            input(type="hidden", name="estudiante", value="#{estudiante.id}")
+                                            input(type="hidden", name="url", value="/estudiante/#{estudiante.id}")
+
+                                            .form-group
+                                                .row
+                                                    .col-md-4
+                                                        input(type="file", class="filestyle", data-input="false", name="userPhoto", accept="image/jpeg")
+                                                .row
+                                                    .col-md-4
+                                                        h5.text-center
+                                                            button(type="submit").btn.btn-primary.btn-sm.margin-btn-upload-student
+                                                                i.fa.fa-cloud-upload
+                                                                | &nbsp; Subir Foto
+                                        script(type="text/javascript").
+                                            $(":file").filestyle({input: false});
+
 
                                 legend
                                 .margin-botton
