--- a/views/postgrado/edit.jade
+++ b/views/postgrado/edit.jade
@@ -166,8 +166,7 @@ block content
                             validators: {
                                 notEmpty: {},
                                 stringLength: {
-                                    min: 6,
-                                    max: 100
+                                    min: 6
                                 }
                             }
                         },
